<resources>
    <string name="app_name">坦白说</string>

    <string name="loading">loading....</string>
    <string name="push">推送</string>
    <string name="appName">21:15</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="me">我</string>

    <string name="authorized_center">认证中心</string>
    <string name="wdxy">我的信用</string>

    <string name="yywt">语言问题</string>

    <string name="yqhy">邀请好友</string>
    <string name="personal_info">个人资料</string>
    <string name="base_info">基础资料</string>
    <string name="select_standard">择偶标准</string>
    <string name="setting">设置</string>
    <string name="set_nickname">修改昵称</string>
    <string name="input_oc">填写职业</string>
    <string name="sure">确定</string>

    <string name="camera">相机</string>
    <string name="upload">上传</string>
    <string name="commit">提交</string>

    <string name="xiang_ce">相册</string>
    <string name="add_picture">添加</string>
    <string name="caoZuo">操作</string>

    <string name="preview">预览</string>

    <string name="modifyPassword">修改密码</string>
    <string name="noPush">资料不向任何人推送</string>
    <string name="ideaResponse">意见反馈</string>
    <string name="contactUs">联系我们</string>
    <string name="userBook">用户协议</string>
    <string name="clearCash">清除缓存</string>
    <string name="judgeUs">评分</string>
    <string name="logOut">退出登录</string>

    <string name="personalInfoBetter">个人资料完善</string>
    <string name="zobzBetter">择偶标准完善</string>
    <string name="xxrzBetter">信息认证完善</string>
    <string name="registerVip">开通VIP</string>

    <string name="personalInfoContent">完善个人标准可以提高匹配度哦</string>
    <string name="zobzContent">完善您的择偶标准，推送更精准</string>
    <string name="xxrzContent">完善认证信息，提高您的魅力</string>
    <string name="vipContent">高质量精准推送等更多尊贵享受</string>

    <string name="how_to_get_better_push">如何获取更好的推送</string>

    <string name="push_time_left">对得人来的再晚也不迟，不是吗！</string>
    <string name="how_to_get_good_push">如何获取优质的推送?</string>
    <array name="base_info">
        <item>昵称</item>
        <item>性别</item>
        <item>出生日期</item>
        <item>身高</item>
        <item>职业</item>
        <item>年收入</item>
        <item>现居地</item>
        <item>户籍</item>
        <item>婚姻状况</item>
        <item>期望结婚时间</item>
    </array>

    <array name="zobz">
        <item>年龄</item>
        <item>户籍</item>
        <item>居住在</item>
        <item>身高</item>
        <item>学历</item>
        <item>年收入</item>
        <item>婚姻状况</item>
        <item>房</item>
        <item>车</item>
        <item>其他要求</item>

    </array>

    <string name="userBook1">杭州四宜科技有限公司（以下简称“四宜科技”）在此特别提醒您，在您注册成为坦白说会员之前，请认真阅读本《坦白说会员服务条款》（以下简称“服务条款”），确保您充分理解服务条款中各条款，包括免除四宜科技责任的条款及限制会员权利的条款。请您审慎阅读并选择接受或不接受本服务条款。除非您接受本服务条款所有条款，否则您不得注册、登录或使用本服务条款所涉服务。您的注册、登录、使用等行为将视为对本服务条款的接受，并同意接受本服务条款各项条款的约束。
本服务条款约定四宜科技与您之间关于“坦白说会员”服务的各项事项。“会员”是指注册、登录、使用本服务条款中四宜科技提供的各种服务的个人。坦白说会员服务是有偿的增值服务，会员必须完全同意本服务条款，并完成付费，才能享受相关服务。
本服务条款是基于“坦白说”软件的《用户协议》而制定，是其不可分割的一部分。同时，四宜科技不时发布的关于会员服务的各种规范、规则等也是本服务条款的一部分。您选择接受本服务条款，开通会员服务成为会员用户，即表示您同意接受本服务条款、《用户协议》及各种规范、规则的各项约束，并将遵守。如果您不接受本服务条款，则不能享受本服务条款所涉会员服务。
本服务条款可由四宜科技随时更新，更新后的服务条款一旦公布即代替原来的服务条款，恕不再另行通知，用户可在本网站查阅最新版服务条款。</string>

    <string name="zhongZe">1、坦白说是由四宜科技创建、运行的婚恋类移动社交产品。\n2、坦白说用户是指完成全部注册流程，愿意接受坦白说《用户协议》并在坦白说相关使用规范的规定下使用坦白说服务的注册用户。\n3、坦白说会员服务是坦白说为坦白说用户提供的有偿增值服务，用户向坦白说支付相关费用后，方可享受专门为会员提供的各项服务。\n4、坦白说会员必须遵守坦白说《用户协议》及本服务条款。</string>

    <string name="fuWuFeiYong">1、会员资格以月为单位计算（每月按31天计算），四宜科技将根据不同的购买方式和数量，向用户提供不同幅度的优惠，具体优惠信息以会员资格支付页上内容为准。\n2、四宜科技可以根据实际情况随时调整会员服务费用标准，经调整的会员服务费用标准将在会员资格支付页上显示，用户按调整后的服务费用标准支付后方可享有或延续会员资格。已按原会员服务费用标准购买会员服务的用户，其会员资格以及所享有的会员服务在已取得的会员资格期限内不受影响，无需补充缴纳差额。</string>

    <string name="fuWuNeiRong">1、坦白说将为会员提供多种专享的增值服务，具体内容将在会员页面显示。\n2、坦白说可以根据实际情况随时调整会员服务内容。</string>
    
    <string name="startEnd">1、坦白说用户完成用户注册程序，并通过坦白说平台提供的付费途径完成会员费用的支付后，即取得坦白说会员资格。\n2、坦白说用户通过坦白说平台完成会员注册，所提交的内容与个人资料必须真实有效。当会员的个人资料发生变化时，会员应及时修改注册的个人资料，否则由此造成的会员权利不能全面有效行使或其他任何后果、责任由会员自行承担。\n3、会员资格有效期自坦白说会员服务开通之时起算，具体期限可以登录坦白说客户端“设置”页查看。\n4、除非用户开通自动延续功能，会员资格有效期届满后，四宜科技将终止向该用户提供会员增值服务，该用户可以通过续交会员服务费用延续会员资格。\n5、会员在会员资格有效期内续费，会员资格有效期将在原有效期基础上相应延长。此外，四宜科技提供自动按月延续会员资格的功能，用户亦可在其会员资格有效期内开通该项功能，授权四宜科技在用户会员资格有效期届满时，自动对其会员资格期限予以续期一个月并从其用户账户中扣除相应的坦白说币，并在续期届满后依此自动延续。如用户账户内坦白说币不足以支付该续期费用，则该功能无法实现。</string>

    <string name="rightDuty">1、坦白说会员平等享有会员的权利，同时应遵守四宜科技的各项规范、规则，包括但不限于本服务条款和《用户协议》。\n2、因违反坦白说《用户协议》而导致会员服务被暂停使用的相关损失，由用户自行承担。\n3、会员在会员资格有效期内可以享受坦白说会员的各项增值服务。\n4、如会员在会员资格有效期内主动终止或取消会员资格，四宜科技不负责退还与该会员剩余会员资格有效期对应的服务费用。\n5、会员自行承担在坦白说中传送、发布信息及使用坦白说免费服务或收费服务的法律责任，会员使用坦白说服务，包括免费服务与收费服务的行为，均应遵守各项法律法规、规章、规范性文件（以下简称“法律法规”）。</string>

    <string name="companyRightDuty">1、四宜科技有义务保证遵守本服务条款、坦白说《用户协议》及各项规范、规则的会员正常使用会员服务，当出现技术故障影响会员服务的正常提供时，四宜科技应尽快排除故障，但对于会员因此产生的任何损失，四宜科技不承担责任。\n2、坦白说在未经会员授权时，不得公开、编辑或透露会员注册及保存的非公开信息，但法律法规明确规定及《用户协议》约定的情形除外。\n3、四宜科技将通过坦白说系统对会员进行通知和公告。\n4、因不可抗力造成会员服务提供的中断或其它缺陷，四宜科技不承担任何责任，但将尽力减少因此给会员造成的损失和影响。\n5、因会员原因造成的坦白说帐号密码泄露，坦白说不承担责任，同时为避免坦白说帐号被盗用后滥用而引起法律风险，坦白说可以在用户举报该情形后采取一切措施避免第三方对用户的会员帐号实施操作行为，而不论该第三方基于何种目的、获取方式是否善意。\n6、因会员在使用坦白说免费服务或收费服务的过程中，故意进行有损四宜科技、坦白说平台、其他坦白说用户合法权益的行为，或存在《用户协议》约定的相关情形，四宜科技有权取消该会员的会员资格或中断一项或多项会员服务而无须给予任何补偿，并保留追究该会员法律责任的权利。\n7、因会员在使用坦白说免费服务或收费服务的过程中，存在违反法律法规的行为，四宜科技有权取消该会员的会员资格而无须给予任何补偿，且该会员须自行承担全部责任。</string>

    <string name="others">1、四宜科技不时发布的关于会员服务的规范、规则等，是本服务条款不可分给的一部分。\n2、如本服务条款与《用户协议》发生冲突或本服务条款无规定时，应以《用户协议》的规定为准。\n3、本服务条款的解释，效力及纠纷的解决，适用中华人民共和国法律。若会员和四宜科技之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，会员同意将纠纷或争议提交四宜科技住所地有管辖权的人民法院管辖。\n4、本服务条款的版权由四宜科技所有，四宜科技保留一切解释和修改的权利。\n5、四宜科技可依照坦白说发展的不同阶段，随着社区管理经验的不断丰富，出于维护坦白说会员秩序的目的，不断完善本服务条款。</string>

</resources>
